<resources>
    <string name="app_name">BMICalculator</string>
    <string name="weight_kg">Weight (Kg):</string>
    <string name="enter_weight_in_kilograms">Enter weight in kilograms</string>
    <string name="height_m">Height (m):</string>
    <string name="enter_height_in_meters">Enter height in meters</string>
    <string name="get_bmi">Get BMI</string>
    <string name="result">Result</string>
    <string name="description">Description</string>
</resources>